Attempted fix to height for form on ios not being enough

--- a/styles.css
+++ b/styles.css
@@ -418,5 +418,6 @@ h3.primary{
 
     @media only screen and (max-width: 768px) {
         height: 180vh;
+        min-height: 180vh;
     }
 }
